# ExpressGenGen

./: .gitignore  CMakeLists.txt  GenGen.pro  README.md  boost.pri  lua.pri  main.cpp  xgengen.pro
Lang/bash/: bashlinecodegenerator.cpp  bashlinecodegenerator.h  bashstaticcodegetter.h
Lang/cpp/: cpplinecodegenerator.cpp  cpplinecodegenerator.h  cppstaticcodegetter.cpp  cppstaticcodegetter.h
Lang/lua/: lualinecodegenerator.cpp  lualinecodegenerator.h  luapostparser.cpp  luapostparser.h  luastaticcodegetter.cpp  luastaticcodegetter.h
Lang/python/: pythonlinecodegenerator.h  pythonstaticcodegetter.h
Lang/web/: weblinecodegenerator.cpp  weblinecodegenerator.h  webstaticcodegetter.h
Samples/: create_cmakelists  gen  new_class  new_test  template_bash_CMakeLists.txt  template_bash_CPP.txt  template_bash_H.txt  template_bash_Test.txt  template_bash_TestHelper.txt
Src/: ArgsForEchoJoiner.h  BashStaticCodeGetter.cpp  BashStaticCodeGetter.h  CommaSpaceArgsForEchoJoiner.cpp  CommaSpaceArgsForEchoJoiner.h  DoubleQuoteStringTokenGenerator.cpp  DoubleQuoteStringTokenGenerator.h  ErrorCollector.cpp  ErrorCollector.h  ErrorCollectorImpl.cpp  ErrorCollectorImpl.h  ErrorPrinter.cpp  ErrorPrinter.h  IndentGenerator.h  IndentGeneratorImpl.cpp  IndentGeneratorImpl.h  KeywordGetter.h  KeywordGetterImpl.cpp  KeywordGetterImpl.h  LineCodeGenerator.h  LineReader.h  Preprocessor.h  Printer.h  ReadingPreprocessor.cpp  ReadingPreprocessor.h  SingleQuoteStringTokenGenerator.cpp  SingleQuoteStringTokenGenerator.h  StaticCodeGetter.h  StdErrErrorPrinter.cpp  StdErrErrorPrinter.h  StdInLineReader.cpp  StdInLineReader.h  StdInReader.cpp  StdInReader.h  StreamLineReader.cpp  StreamLineReader.h  StreamReader.cpp  StreamReader.h  StringTokenGenerator.h
TemplateProcessingEngine/: codeappender.cpp  codejoiner.h  gengenfactory.cpp  gengenfactory.h  gengenparser.cpp  gengenparser.h  postparser.cpp  postparser.h  staticcodegetter.h
Tests/: TestArgsForEchoJoiner.cpp  TestErrorCollector.cpp  TestErrorPrinter.cpp  TestHelper.h  TestIndentGenerator.cpp  TestKeywordGetter.cpp  TestLineCodeGenerator.cpp  TestLineReader.cpp  TestMain.cpp  TestPreprocessor.cpp  TestStaticCodeGetter.cpp  TestStringTokenGenerator.cpp  main.cpp
WindowsRsrc/: WindowsRes.rc  winrsrc.rc  xpmanifest.xml
gengen/: codeappender.cpp  codeappender.h  codejoiner.cpp  codejoiner.h  gengenfactory.cpp  gengenfactory.h  gengenparser.cpp  gengenparser.h  linecodegenerator.h  postparser.h  staticcodegetter.h
languages/bash/: bashlinecodegenerator.h  bashstaticcodegetter.cpp  bashstaticcodegetter.h
languages/cpp/: cpplinecodegenerator.cpp  cpplinecodegenerator.h  cppstaticcodegetter.cpp  cppstaticcodegetter.h
languages/lua/: lualinecodegenerator.h  luapostparser.h  luastaticcodegetter.h
languages/python/: pythonlinecodegenerator.cpp  pythonlinecodegenerator.h  pythonstaticcodegetter.cpp  pythonstaticcodegetter.h
languages/web/: weblinecodegenerator.cpp  weblinecodegenerator.h  webstaticcodegetter.cpp  webstaticcodegetter.h
samples/: lang_bash_CMakeLists.txt  lang_python_Hello.txt
winrsrc/: winrsrc.rc  xpmanifest.xml
